<resources>
    <string name="app_name">ScanCode</string>
    <string name="menu_scan">Quét</string>
    <string name="menu_create">Tạo</string>
    <string name="menu_history">Lịch sử</string>
    <string name="menu_setting">Cài đặt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //Ni là của Đông
    //Class ResultScan
    <string name="showper_title">Chưa cấp quyền cam</string>
    <string name="showper_message">Vui lòng cấp quyền cho camera để sử dụng tín năng quét</string>
    <string name="showsetting_message">Chỉ có thể quét bằng camera khi được cấp quyền, vui lòng truy cập vào cài đặt để cấp quyền camera.</string>
    <string name="settings">Cài đặt</string> //SETTINGS

    <string name="SECONDARY_EMAIL_TYPE">Nhà riêng</string>
    <string name="SECONDARY_PHONE_TYPE">Cơ quan</string>
    <string name="TERTIARY_PHONE_TYPE">Số fax cơ quan</string>

    <string name="question_save_image">Bạn có muốn lưu ảnh về máy không?</string> // Do you want to save pictures of your computer?
    <string name="No">Không</string> //No
    <string name="Yes">Chấp nhận</string> // Accept
    <string name="save_successfully">Lưu thành công</string> //Save successfully
    <string name="no_support_version">Xin lỗi phiên bản android hiện tại của bạn không hổ trợ tính năng này :\'\(</string> //Sorry your current version of Android version does not support this feature :'\\(
    <string name="access_link">Truy cập liên kết</string> //Access link
    <string name="send_email">Gửi email từ </string> // Email from
    <string name="acces_wifi">Chuyển hướng tới mạng Wifi</string> //Shift towards wifi network
    <string name="send_mess">Gửi tin nhắn</string> // Send Message
    <string name="add_contact">Thêm liên hệ</string> // Add contact
    <string name="access_position">Truy cập vị trí</string> //Access position
    <string name="add_calender">Thêm lịch trình</string> //Add schedule
    <string name="dial">Quay số</string> //Dial
    <string name="wep">Rất tiếc, phương pháp mã hoá WEP không còn được Google hỗ trợ kể từ phiên bản Android 10 :\'\(</string> //Unfortunately, WEP encryption method is no longer supported by Google since the Android 10 version :\'\(
    <string name="connect_wifi">Kết nối đến mạng Wifi</string> //Connect to Wifi network
    <string name="cancel">Huỷ</string> //Canel
    <string name="notice_adr10">Các thiết bị Android 10 trở lên cần kết nối Wifi một cách thủ công.</string> //Android devices and above need to connect to wifi manually.
    <string name="has_been_copied">Mật khẩu của bạn đã được sao chép, ấn OK để chuyển hướng đến cài đặt.</string> //Your password has been copied, press OK to change to settings.
    <string name="copy_success">Sao chép thành công!!!</string> //Copy success!!!
    <string name="search_product">Tìm kiếm sản phẩm</string> //Search product
    <string name="share_qr">Chia sẽ mã QR</string> //Share QR code
    <string name="share_result">Chia sẽ kết quả quét</string> //Share scan results
    
    <string name="product">Sản phẩm</string> //Product
    <string name="text">Văn bản</string> //Text
    <string name="link">Liên kết</string> //Link
    <string name="telephone">Số điện thoại</string> //Telephone
    <string name="sms">Tin nhắn</string> //SMS
    <string name="geo">Vị trí</string> //GEO
    <string name="event">Sự kiện</string> //Event
    
    //Class FragmentScanHome
    <string name="notice_unable_to_scan">Không thể quét</string> // Unable to scan
    <string name="notice_unable_to_scan_image">Không thể quét hình ảnh</string> // Unable to scan image
    <string name="btn_scan_by_camera">Quét bằng camera</string> // Scan using the camera
    <string name="btn_scan_by_image">Quét bằng hình ảnh</string> // Scan the code by image

    //-------------------------------------------
    //Ni là của Biên

    <string-array name="strings_type_internet_dropdown">
        <item>WPA/ WPA2</item>
        <item>WEP</item>
        <item>@string/wifi_type</item>
    </string-array>

    //Ni là của Dương

    <string name="settings_control">Điều khiển</string>
    <string name="setting_sound">Âm thanh</string>
    <string name="setting_vibrate">Rung</string>
    <string name="setting_copy">Sao chép vào bộ nhớ tạm</string>
    <string name="setting_chung">Chung</string>
    <string name="setting_ligthdark">Giao diện tối</string>
    <string name="setting_language">Ngôn ngữ</string>
    <string name="setiing_intro">Giới thiệu</string>
    <string name="setting_version">Phiên bản</string>
    <string name="setting_huongdan">Hướng dẫn</string>
    <string name="setting_on">Tắt</string>
    <string name="setting_off">Bật</string>

    <string name="feedback_edit">Hãy cho chúng tôi biết vấn đề mà bạn đã gặp</string>
    <string name="feeback1">Quét không hoạt động</string>
    <string name="feedback2">Cần thêm thông tin khi quét</string>
    <string name="feedback3">Khác</string>
    <string name="feedbackedit">Vui lòng cho chúng tôi biết thêm chi tiết để chúng tôi có thể giải quết vấn đề của bạn nhanh hơn.</string>
    <string name="feebackbtn">Gửi đi</string>
    <string name="settings_feedback">Phản hồi</string>
    <string name="create_text">Văn bản</string>
    <string name="create_wifi">Wifi</string>
    <string name="create_contact">Liên lạc</string>
    <string name="create_sms">Tin nhắn</string>
    <string name="create_email">E-mail</string>
    <string name="create_url">Trang web</string>
    //
    <string name="wifi_id">Tên mạng</string>
    <string name="wifi_pass">Mật khẩu</string>
    <string name="wifi_type">Không</string>
    //

    <string name="required_field">Trường này là bắt buộc!</string>

    <string name="sms_recipient">Người nhận</string>
    <string name="sms_message">Tin nhắn</string>

    <string name="email_to">E-mail</string>
    <string name="email_title">Tiêu đề</string>
    <string name="email_message">Tin nhắn</string>

    <string name="contact_surname">Họ</string>
    <string name="contact_name">Tên</string>
    <string name="contact_company">Công ty</string>
    <string name="contact_job">Công việc</string>
    <string name="contact_phone">Điện thoại</string>
    <string name="contact_address">Địa chỉ</string>
    <string name="contact_website">Trang web</string>
    <string name="email_validation">Nhập đúng định dạng E-mail!</string>


    <string name="required_quantity">Bắt buộc 8 kí tự hoặc hơn!</string>

    <string name="settings_language">Ngôn ngữ</string>
    <string name="settings_language_en">Tiếng Anh</string>
    <string name="settings_language_vn">Tiếng Việt</string>
    <string name="version">"Phiên bản: "</string>
    <string name="intro_scan">Quét mã QR và mã vạch</string>
    <string name="intro_avoid_mistakes">Tránh những lỗi thường gặp khi quét mã vạch</string>
    <string name="intro_free">Không có quảng cáo và miễn phí</string>
    <string name="intro_title">Ứng dụng quét mã vạch</string>
    <string name="help_can_read_qr_1">1. Để có được kết quả quét chính xác bạn cần làm theo các bước sau:</string>
    <string name="help_can_read_qr_2">a. Đảm bảo độ tương phản và không bị mờ.</string>
    <string name="help_can_read_qr_3">b. Hình ảnh không bị hắc sáng hoặc bị che bóng</string>
    <string name="help_can_read_qr_4">c. Hình ảnh không bị che khuyết.</string>
    <string name="help_can_read_qr_5">d. Khi quét không được zoom quá gần.</string>
    <string name="help_can_read_qr_6">2. Đối với các điện thoại đời cũ,</string>
    <string name="help_can_read_qr_7">\ độ phân giải máy ảnh sẽ ảnh hưởng đến quá trình quét mã.</string>
    <string name="help_can_read_qr_8">Để giải quyết chúng tôi khuyên bạn nên sử dụng hình ảnh từ thư viện</string>
    <string name="help_can_read_qr_9">\ để có thể tối ưu hơn trong quá trình quét mã.</string>
    <string name="help_can_read_qr_10">3. Nếu vẫn không thể quét được vui lòng</string>
    <string name="help_can_read_qr_11">phản hồi</string>
    <string name="help_can_read_qr_12">chúng tôi qua email,\ </string>
    <string name="help_can_read_qr_13">chúng tôi sẽ giải quyết vấn đề của bạn trong thời gian sớm nhất.</string>
    <string name="cant_access_wifi_1">1. Hãy đảm bảo rằng bạn đang</string>
    <string name="cant_access_wifi_2">" nằm trong vùng phủ sóng Wifi, tên người dùng và mật khẩu chính xác."</string>
    <string name="cant_access_wifi_3">Nếu vẫn không thể kết nối bạn vui lòng\ </string>
    <string name="cant_access_wifi_4">hỏi nhà cung cấp dịch vụ của bạn và hỏi xem mã đã được thay đổi chưa.</string>
    <string name="cant_access_wifi_5">"2. Nếu kết quả hiển thị dưới dạng văn bản, bạn vui lòng "</string>
    <string name="cant_access_wifi_6">kết nối vào Wifi \\</string>
    <string name="cant_access_wifi_7">"bằng cách thủ công với các thiết bị "</string>
    <string name="cant_access_wifi_8">android 10 trở lên, do giới hạn hệ thống.</string>
    <string name="erro_link_1">"1. Ứng dụng không thể thay đổi nội dung của mã, nếu trang web không hoạt động khả năng cao là "</string>
    <string name="erro_link_2">do bên sở hữu trang web.</string>
    <string name="erro_link_3">Rất tiếc chúng tôi không thể hỗ trợ cho bạn vấn đề này.</string>
    <string name="erro_link_4">"2. Có thể là do "</string>
    <string name="erro_link_5">người tạo mã QR này đã nhập sai liên kết dẫn tới đường liên kết đến sai địa chỉ.</string>
    <string name="erro_link_6">Hoặc cũng có thể là do mã</string>
    <string name="erro_link_7">QR đã hết hạn</string>
    <string name="erro_link_8">, trường hợp này</string>
    <string name="erro_link_9">"bạn vui lòng liên hệ với người cung cấp mã "</string>
    <string name="erro_link_10">để của bạn để xác nhận rõ.</string>
    <string name="erro_link_11">"3. Với một số trường hợp, một số trang web cần "</string>
    <string name="erro_link_12">mở ở một điều kiện đặc biệt,</string>
    <string name="erro_link_13">"ví dụ như mở bằng một "</string>
    <string name="erro_link_14">ứng dụng nhất định.</string>
    <string name="erro_link_15">Với thường hợp này bạn vui lòng</string>
    <string name="erro_link_16">" làm theo các bước hướng dẫn của nhà cung cấp QR cho bạn."</string>
    <string name="tips">Mẹo quét</string>
    <string name="code_cant_be_read">Không thể đọc được mã</string>
    <string name="cant_connect_to_wifi">Không thể kết nối Wifi</string>
    <string name="link_is_broken">Liên kết bị lỗi</string>
    <string name="help">Trợ giúp</string>
    <string name="other_problems">Các vấn đề khác</string>
    <string name="should">"Nên: "</string>
    <string name="should_not">"Không nên: "</string>
    <string name="direction_0">Hướng 0°</string>
    <string name="direction_90">Hướng 90°</string>
    <string name="direction_180">Hướng 180°</string>
    <string name="turn_on_the_led">Bật đèn LED khi tối</string>
    <string name="other_direction">Hướng khác</string>
    <string name="turn_on_the_led_2">Bật đèn LED khi sáng</string>
    <string name="faint_img">Hình ảnh mờ/ nhạt</string>
    <string name="low_contrast">Tương phản thấp</string>
</resources>