<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/settings_control" >
        <SwitchPreference
            app:key="sound"
            app:icon="@drawable/sound_24"
            app:title="@string/setting_sound" />
        <SwitchPreference
            app:icon="@drawable/vibrate_24"
            app:key="vi"
            app:title="@string/setting_vibrate" />
        <SwitchPreference
            app:key="copy"
            app:icon="@drawable/copy_24"
            app:title="@string/setting_copy" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/setting_chung">
        <SwitchPreference
            app:icon="@drawable/dark_24"
            app:key="v"
            app:summaryOn="@string/setting_off"
            app:summaryOff="@string/setting_on"
            app:title="@string/setting_ligthdark"
            app:defaultValue="false"/>
        <Preference
            app:icon="@drawable/language_24"
            app:key="language"
            app:title="@string/setting_language"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/setiing_intro">
        <Preference
            app:icon="@drawable/introduction_24"
            app:key="introduc"
            app:title="@string/setiing_intro" />
        <Preference
            app:icon="@drawable/version_24"
            app:key="version"
            app:title="@string/setting_version" />
        <Preference
            app:icon="@drawable/help_24"
            app:key="intro"
            app:title="@string/setting_huongdan" />
    </PreferenceCategory>

</PreferenceScreen>