<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Setting.Feebback">
    <TextView
        android:text="@string/feedback_edit"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/primary_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/check1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="5dp"
        android:button="@drawable/cuscheck"
        android:text="@string/feeback1"
        android:buttonTint="@color/primary_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/check2"
        android:paddingLeft="5dp"
        android:button="@drawable/cuscheck"
        android:buttonTint="@color/primary_icon"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/feedback2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/check3"
        android:button="@drawable/cuscheck"
        android:layout_marginLeft="10dp"
        android:paddingLeft="5dp"
        android:buttonTint="@color/primary_icon"
        android:layout_marginTop="10dp"
        android:text="@string/feedback3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/feebackedit"
        android:paddingLeft="5dp"
        android:textSize="15dp"
        android:hint="@string/feedbackedit"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_feebback"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/feebackbtn"
        android:text="@string/feebackbtn"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/cusbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>