<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:stretchColumns="*"
    android:layout_margin="16dp"
    tools:context=".Create.createactivity.ContactActivity">
    <TableRow>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:layout_marginRight="8dp"
            app:startIconDrawable="@drawable/ic_contact_24"
            app:startIconTint="@color/pink_bold"
            android:hint="@string/contact_surname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:hint="@string/contact_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
    </TableRow>
//
    <TableRow>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:layout_marginRight="8dp"
            app:startIconDrawable="@drawable/ic_job_24"
            app:startIconTint="@color/pink_bold"
            android:hint="@string/contact_company">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            app:startIconTint="@color/pink_bold"
            android:hint="@string/contact_job">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
    </TableRow>
                        <!--    Phone-->
    <TableRow>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="6"
            app:startIconDrawable="@drawable/ic_call_24"
            app:startIconTint="@color/pink_bold"
            android:hint="@string/contact_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

    </TableRow>
                        <!--    Email-->
    <TableRow>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="6"
            app:startIconDrawable="@drawable/ic_mail_24"
            app:startIconTint="@color/pink_bold"
            android:hint="@string/create_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputContactEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </TableRow>
                        <!--    Address-->
    <TableRow>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="6"
            app:startIconDrawable="@drawable/ic_location_on_24"
            app:startIconTint="@color/pink_bold"
            android:hint="@string/contact_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputContactAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </TableRow>
                        <!--    Website-->
    <TableRow>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="6"
            app:startIconDrawable="@drawable/ic_global_24"
            app:startIconTint="@color/pink_bold"
            android:hint="@string/contact_website">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </TableRow>
</TableLayout>
