<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.Setting">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/setting_chung"
                android:textColor="@color/green"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cus_dark_setting"

                android:stretchColumns="*">

                <TableRow
                    android:id="@+id/tb_light"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:background="@drawable/cus_bottom_afterclick2"
                    android:paddingTop="25dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:src="@drawable/dark_241" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:layout_span="6"
                        android:text="@string/setting_ligthdark"
                        android:textSize="18dp" />

                    <Switch
                        android:paddingRight="20dp"
                        android:id="@+id/sw_light"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:layout_span="1"
                        android:clickable="false" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tv"
                    android:background="@drawable/cus_buttom_afterclick"

                    android:paddingTop="10dp"
                    android:paddingBottom="20dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:src="@drawable/language_241" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:layout_span="6"
                        android:text="@string/setting_language"
                        android:textSize="18dp" />

                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/settings_control"
                android:textColor="@color/green"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/cus_dark_setting"

                android:stretchColumns="*">

                <TableRow

                    android:id="@+id/tb_sound"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cus_bottom_afterclick2"
                    android:paddingTop="25dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:src="@drawable/sound_241" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:layout_span="6"
                        android:text="@string/setting_sound"
                        android:textSize="18dp" />

                    <Switch
                        android:paddingRight="20dp"
                        android:id="@+id/sw_sound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_span="1"
                        android:clickable="false" />
                </TableRow>

                <TableRow
                    android:background="@drawable/cus_bottom_afterclick1"
                    android:id="@+id/tb_vibrate"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:src="@drawable/vibrate_241" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:layout_span="6"
                        android:text="@string/setting_vibrate"
                        android:textSize="18dp" />

                    <Switch
                        android:paddingRight="20dp"
                        android:clickable="false"
                        android:id="@+id/sw_vibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:layout_span="1" />
                </TableRow>

                <TableRow
                    android:background="@drawable/cus_buttom_afterclick"
                    android:id="@+id/tb_copy"
                    android:paddingTop="10dp"
                    android:paddingBottom="25dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:src="@drawable/copy_241" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:layout_span="6"
                        android:text="@string/setting_copy"
                        android:textSize="18dp" />

                    <Switch
                        android:paddingRight="20dp"
                        android:id="@+id/sw_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_span="1"
                        android:clickable="false" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/setiing_intro"
                android:textColor="@color/green"
                android:textSize="17dp"
                android:textStyle="bold" />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/cus_dark_setting"

                android:layout_marginBottom="30dp"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cus_bottom_afterclick2"
                    android:paddingTop="25dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/introduction">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:src="@drawable/introduction_241" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_span="7"
                        android:text="@string/setiing_intro"
                        android:textSize="18dp" />
                </TableRow>

                <TableRow
                    android:background="@drawable/cus_bottom_afterclick1"
                    android:id="@+id/feedback"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:src="@drawable/feedback" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:layout_span="7"
                        android:text="@string/settings_feedback"
                        android:textSize="18dp" />
                </TableRow>
                <TableRow
                    android:background="@drawable/cus_bottom_afterclick1"
                    android:id="@+id/version"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:src="@drawable/version_242" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:layout_span="7"
                        android:text="@string/setting_version"
                        android:textSize="18dp" />

                </TableRow>
                <TableRow
                    android:background="@drawable/cus_buttom_afterclick"
                    android:id="@+id/help"
                    android:paddingTop="15dp"
                    android:paddingBottom="25dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:src="@drawable/help_241" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:layout_span="6"
                        android:text="@string/setting_huongdan"
                        android:textSize="18dp" />

                </TableRow>
            </TableLayout>
        </LinearLayout>

    </ScrollView>


</FrameLayout>